--- a/BA Portal/Views/PDFs/Index.cshtml
+++ b/BA Portal/Views/PDFs/Index.cshtml
@@ -6,6 +6,11 @@
 }
 
 <h1>PDFs</h1> <br />
+This is a list of all the forms from all the clients, that are currently stored in the database. <br /><br />
+
+For Developers Use Only.<br /><br />
+
+
 <table class="table">
     <tr>
         <th>
