--- a/BA Portal/Views/PDFs/TakeAnotherAction.cshtml
+++ b/BA Portal/Views/PDFs/TakeAnotherAction.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 } 
 
-<h3>Would you like to also add an insurance form?</h3> 
+<h3>Would you like to also add a consent form?</h3> 
 <div >
     <h2>@Html.ActionLink("Yes", "CaptureIDandRedirectforInsurance", "Signatures", new { id = ViewBag.ID },null) </h2>
     <h2>@Html.ActionLink("No", "PassSubjecttoAllForms", "Subjects", new { id = ViewBag.ID }, null)</h2>
