--- a/BA Portal/Views/PDFs/AllForms.cshtml
+++ b/BA Portal/Views/PDFs/AllForms.cshtml
@@ -29,8 +29,9 @@
            
             <strong>City:</strong> @ViewBag.City <br />
             <strong>Has Allergy:</strong> @ViewBag.Allergy <br /> 
-            <br />
-            <br />
+            <strong>First Seen:</strong> @ViewBag.firstseen <br />
+            <strong>Last Seen::</strong> @ViewBag.lastseen <br /> 
+
 
             
         </td>
